Adding the basis to create blogs.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,15 +10,16 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<!-- link for icon -->
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-			<script src="/script/last_edition.js"></script>
-			<script src="/script/change_language.js"></script>
+			<script src="/js/last_edition.js"></script>
+			<script src="/js/change_language.js"></script>
 		</head>
 		<body onload="setLastCommit('english')">
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 	        		<li><a href="/work_experiences">Work experiences</a></li>
-					<li><a href="/project">Completed projects</a></li>
+					<li><a href="/projects">My projects</a></li>
+					<li><a href="/blog">Blog</a></li>
 					<img id="flag" src="/ressources/fr_flag.png" title="Vers le mode Français" onclick="change_language()" style="cursor: pointer;">
 				</ul>
 	    		
