--- a/_layouts/french.html
+++ b/_layouts/french.html
@@ -8,15 +8,16 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<!-- link for icon -->
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-			<script src="/script/last_edition.js"></script>
-			<script src="/script/change_language.js"></script>
+			<script src="/js/last_edition.js"></script>
+			<script src="/js/change_language.js"></script>
 		</head>
 		<body onload="setLastCommit('french')">
 			<nav>
 	    		<ul>
 	        		<li><a href="/fr">Accueil</a></li>
 	        		<li><a href="/work_experiences/fr">Expériences</a></li>
-					<li><a href="/project/fr">Mes projets</a></li>
+					<li><a href="/projects/fr">Mes projets</a></li>
+					<li><a href="/blog/fr">Blog</a></li>
 					<img id="flag" src="/ressources/en_flag.png" title="Go to English mode" onclick="change_language()" style="cursor: pointer">
 	    		</ul>
 			</nav>
