Blog is better organized !

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,7 @@
 		<head>
 			<title>{{ page.title }}</title>
 			<!-- link to the French version -->
-			<link rel="alternate" hreflang="fr"
-        	href="/fr"/>
+			<link rel="alternate" hreflang="fr" href="/fr"/>
 
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
