--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,43 @@
----
-layout: default
----
-<h1>{{ page.title }}</h1>
+<!DOCTYPE html>
+	<html lang="fr" data-theme='dark'>
+		<head>
+			<title>{{ page.title }}</title>
+			<!-- link to main stylesheet -->
+			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<!-- link for icon -->
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+			<script src="/js/last_edition.js"></script>
+		</head>
+		<body onload="setLastCommit('french')">
+			<nav>
+	    		<ul>
+					<li><a href="/blog/fr"><i class="fa fa-arrow-left" aria-hidden="true"></i> Retourner au menu des blogs</a></li>
+	    		</ul>
+			</nav>
+			
+        <div class="post" style="padding-bottom: 1.5em; padding-top: 5em;">
+          {{ content }}
+        </div>
+			
+		<footer>
+			<ul>
+				<li> 
+					<i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i>
+					<a href="mailto:moineaucyril@gmail.com">
+						email</a>
+				</li>
+				<li>
+					<i class="fa fa-github fa-lg" aria-hidden="true"></i>
+					<a href="https://github.com/cmoineau"> github.com/cmoineau</a>
+				</li>
+				<li>
+					<i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
+					<a href="https://www.linkedin.com/in/cmoineau"> linkedin/in/cmoineau</a>
+				</li>
+				<p id="lastchange"; style="float : right; font-size: 0.8em; padding-right: 1em;";></p>
+			</ul>
+		</footer>
 
-<div class="post">
-  {{ content }}
-</div>
+		</body>
+
+	</html>
