Blog section looks better !

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,9 @@
         <div class="post" style="padding-bottom: 1.5em; padding-top: 5em;">
           {{ content }}
         </div>
-			
+
+		<p class=box style="text-align: center;">Merci d'avoir pris le temps de lire cet article, j'espère qu'il vous aura permis d'apprendre de nouvelles choses !</p>
+			<!--Mettre ici un lien pour s'inscrire au flux RSS ?-->
 		<footer>
 			<ul>
 				<li> 
