--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,8 @@
 			<!-- link for icon -->
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 			<script src="/js/last_edition.js"></script>
+			<script src="/js/clipboard.js"></script>
+			<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=60a105a3a99fbf0011744211&product=sticky-share-buttons' async='async'></script>
 		</head>
 		<body onload="setLastCommit('french')">
 			<nav>
@@ -14,19 +16,40 @@
 					<li><a href="/blog/fr"><i class="fa fa-arrow-left" aria-hidden="true"></i> Retourner au menu des blogs</a></li>
 	    		</ul>
 			</nav>
+		
+				<!-- <div class="share_butons">
+			<div class="share_container">
+				<p>Partage :</b></p>
+			</div>
+			<div class="share_container">
+				<div class="share_buton">
+					<i class="fa fa-share-alt" aria-hidden="true" onclick="url_to_clipboard()"></i>
+				</div>
+				<div class="share_info">
+					<p>Copier lien.</p>
+				</div>
+			</div>
+			<div class="share_container">
+				<div class="share_buton">
+					<i class="fa fa-share-alt" aria-hidden="true" onclick="url_to_clipboard()"></i>
+				</div>
+				<div class="share_info">
+					<p>Copier lien.</p>
+				</div>
+			</div>
+		</div> -->
 			
         <div class="post" style="padding-bottom: 1.5em; padding-top: 5em;">
           {{ content }}
         </div>
 
-		<p class=box style="text-align: center;">Merci d'avoir pris le temps de lire cet article, j'espère qu'il vous aura permis d'apprendre de nouvelles choses !</p>
-			<!--Mettre ici un lien pour s'inscrire au flux RSS ?-->
+		<div class="sharethis-inline-reaction-buttons"></div>
+
 		<footer>
 			<ul>
 				<li> 
 					<i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i>
-					<a href="mailto:moineaucyril@gmail.com">
-						email</a>
+					<a href="mailto:moineaucyril@gmail.com">email</a>
 				</li>
 				<li>
 					<i class="fa fa-github fa-lg" aria-hidden="true"></i>
