--- a/_layouts/french.html
+++ b/_layouts/french.html
@@ -8,80 +8,18 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<!-- link for icon -->
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-			<script src="/js/last_edition.js"></script>
-			<script src="/js/change_language.js"></script>
 		</head>
-		<body onload="setLastCommit('french')">
-			<nav>
-	    		<ul>
-	        		<li><a href="/fr">Accueil</a></li>
-	        		<li><a href="/work_experiences/fr">Expériences</a></li>
-					<li><a href="/projects/fr">Mes projets</a></li>
-					<li><a href="/blog/fr">Blog</a></li>
-					<img id="flag" src="/ressources/en_flag.png" title="Go to English mode" onclick="change_language()" style="cursor: pointer">
-	    		</ul>
-			</nav>
-			<!--
-			<div class="toggle-container" style="margin-right: 1.5em; margin-top: 1em">
-					<input type="checkbox" id="switch" position='fixed' name="theme"/><label for="switch">Toggle</label>
-    		</div>
-			-->
+		
+		<body>
+			{% include header_fr.html %}
 
 			<div class="container" style="padding-bottom: 1.5em; padding-top: 5em;">
 			
 				{{ content }}
 			
 			</div><!-- /.container -->
-			
-			<footer>
-	    		<ul>
-	        		<li> 
-	        			<i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i>
- 						<a href="mailto:moineaucyril@gmail.com">
- 							email</a>
- 					</li>
-	        		<li>
-	        			<i class="fa fa-github fa-lg" aria-hidden="true"></i>
-	        			<a href="https://github.com/cmoineau"> github.com/cmoineau</a>
-					</li>
-					<li>
-	        			<i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
-	        			<a href="https://www.linkedin.com/in/cmoineau"> linkedin/in/cmoineau</a>
-	        		</li>
-	        		<p id="lastchange"; style="float : right; font-size: 0.8em; padding-right: 1em;";></p>
-				</ul>
-			</footer>
+
+			{% include footer_fr.html %}
 
 		</body>
-		<script type="text/javascript">
-			let trans = () => {
-	            document.documentElement.classList.add('transition');
-	            window.setTimeout(() => {
-	                document.documentElement.classList.remove('transition')
-	            }, 1000)
-	        }
-
-
-			var checkbox = document.getElementById('switch');
-    		checkbox.addEventListener('change', function() {
-	            if(this.checked) {
-	                trans()
-	                document.documentElement.setAttribute('data-theme', 'dark')
-	                localStorage.setItem("data-theme", 1);
-	            } else {
-	                trans()
-	                document.documentElement.setAttribute('data-theme', 'light')
-	                localStorage.setItem("data-theme", 0);
-	            }
-    		})
-
-    		if(!("data-theme" in localStorage)){
-				localStorage.setItem("data-theme", 0);
-			}else{
-				if (localStorage.getItem('data-theme') != 0){
-					document.documentElement.setAttribute('data-theme', 'dark')
-					checkbox.checked = true
-				}
-			}
-		</script>		
 	</html>
