--- a/css/main.css
+++ b/css/main.css
@@ -223,15 +223,17 @@ div.post{
 
 .post_image{
     position:absolute;
-    opacity:0.3;
+    opacity:0.6;
     height:15em;
     width: 25em;
     z-index: 1;
     box-shadow: 2px 0px 6px black;
 }
-.article_container:hover{
-    opacity:0.5;
+
+.article_container:hover .post_image{
+    filter: blur(1px);
 }
+
 .post_text{
     z-index: 2;
     position:absolute;
@@ -246,4 +248,14 @@ div.post{
     text-shadow: 0px 0px 0px;
     font-weight: bold;
     font-size: 1.1em;
+}
+
+.description{
+    margin-left: 20em; 
+    margin-right: 20em; 
+    margin-bottom: 3em; 
+    border-bottom: 1px solid; 
+    border-top: 1px solid;
+    display: flex; 
+    flex-direction: column;
 }
