--- a/_layouts/fr.html
+++ b/_layouts/fr.html
@@ -11,6 +11,8 @@
 		</head>
 		
 		<body>
+			{% include scroll_to_top.html%}
+			
 			{% include header_fr.html %}
 
 			<div class="container" style="padding-bottom: 1.5em; padding-top: 5em;">
