--- a/_layouts/post_fr.html
+++ b/_layouts/post_fr.html
@@ -9,7 +9,9 @@
 			<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=60a105a3a99fbf0011744211&product=sticky-share-buttons' async='async'></script>
 		</head>
 		<body >
-			
+		
+		{% include scroll_to_top.html%}
+
 		{% include header_fr.html %}
 
 			
