Cleaning blog + small fixes.

--- a/_includes/lang_switcher.html
+++ b/_includes/lang_switcher.html
@@ -19,7 +19,7 @@
             {% if post.lang == "fr" %}
                 {% assign language="Français" %}
             {% endif %}
-            <a href="{{ page.url }}">{{ language }}</a>
+            <a href="{{ post.url }}">{{ language }}</a>
         {% endfor %}
     </div>
 </div> 
