--- a/_layouts/post_en.html
+++ b/_layouts/post_en.html
@@ -45,7 +45,9 @@
 					{% endfor %}
 				</div>	
 			</div>
-
+			<figure>
+				<img src="{{ page.image }}" alt="Illustration article" style="width: 36em; height: 18em;">
+			</figure>
 
           	{{ content }}
         </div>
