--- a/_layouts/post_fr.html
+++ b/_layouts/post_fr.html
@@ -45,12 +45,14 @@
 					{% endfor %}
 				</div>	
 			</div>
-
+			<figure>
+				<img src="{{ page.image }}" alt="Illustration article" style="height:15em;width: 25em;">
+			</figure>
 
           	{{ content }}
         </div>
 
-		{% include header_fr.html %}
+		{% include footer_fr.html %}
 
 		</body>
 
