--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,7 @@ div.blurb{
 }
 div.post{
     margin: 0px auto;
-    width: 70%;
+    width: 60%;
 }
 
 #flex-container{
@@ -172,18 +172,6 @@ div.post{
     padding: 5px;
 }
 
-#flag {
-    border-radius: 5px;
-    width: 3em;
-    height: 2em;
-    vertical-align: middle;
-    float:right;
-    margin-bottom: 1em;
-    margin-right: 1em;
-    cursor: pointer;
-}
-
-
 .box {
     padding: 2em; 
     background-color: var(--bg-box);
@@ -195,6 +183,31 @@ div.post{
 .box:hover {
     transform: scale(1.01);
 }
+
+.fun_fact{
+    display: flex;
+    flex-wrap: row;
+    padding: 2em; 
+    background-color: var(--bg-box);
+    box-shadow: 2px 3px 6px var(--shadow);
+    margin-bottom: 2em;
+    border-radius: 2px;
+    transition: transform ease-in-out 0.3s;
+}
+.fun_fact:hover {
+    
+    transform: scale(1.01);
+}
+.bulb{
+    margin: auto;
+    padding-right: 1em;
+    font-size: 2em;
+}
+
+.fun_fact:hover .bulb{
+    text-shadow: 0px 0px 6px yellow;
+}
+
 .articles{
     display: flex;
     flex-wrap: wrap;
