--- a/_includes/lang_switcher.html
+++ b/_includes/lang_switcher.html
@@ -1,4 +1,4 @@
-<div class="lang_switcher">
+<li class="lang_switcher">
     <button class="langbtn"><i class="fa fa-language fa-lg" aria-hidden="true"></i></button>
     <div class="lang_switcher-content">
         {% assign pages=site.pages | where:"ref", page.ref%}
@@ -22,4 +22,4 @@
             <a href="{{ post.url }}">{{ language }}</a>
         {% endfor %}
     </div>
-</div> 
+</li> 
