--- a/css/main.css
+++ b/css/main.css
@@ -310,9 +310,9 @@ margin-left: auto;
 cursor: pointer;
 }
 
-/* The container <div> - needed to position the dropdown content */
 .lang_switcher {
 position: fixed;
+: 1em;
 display: inline-block;
 right: 1em;
 }
