Fix W3C warnings and errors.

--- a/_layouts/fr.html
+++ b/_layouts/fr.html
@@ -8,9 +8,10 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<!-- link for icon -->
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+			<script src="/js/last_edition.js"></script>
 		</head>
 		
-		<body>
+		<body onload="setLastCommit('french')">
 			{% include scroll_to_top.html%}
 			
 			{% include header_fr.html %}
