--- a/_layouts/en.html
+++ b/_layouts/en.html
@@ -9,8 +9,9 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<!-- link for icon -->
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+			<script src="/js/last_edition.js"></script>
 		</head>
-		<body>
+		<body onload="setLastCommit('english')">
 			{% include scroll_to_top.html%}
 
 			{% include header_en.html %}
