--- a/_includes/footer_en.html
+++ b/_includes/footer_en.html
@@ -13,7 +13,7 @@
             <i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
             <a href="https://www.linkedin.com/in/cmoineau"> linkedin/in/cmoineau</a>
         </li>
-        <p id="lastchange"; style="float : right; font-size: 0.8em; padding-right: 1em;";></p>
+        <p id="lastchange"; style="float : right; font-size: 0.8em; padding-right: 1em;"></p>
     </ul>
 
 </footer>
