--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,10 @@ li{
     font-size: 1.3em;
 }
 
+ul li ul li{
+    font-size: 1em;
+}
+
 footer {
     border-top: 1px solid;
 }
@@ -162,7 +166,7 @@ div.post{
     width: 60%;
 }
 
-#flex-container{
+.flex-container{
     display: flex;
     width: 100%;
     height: 100%;
