Changing <p> into <li> for lastchange class.

--- a/_includes/footer_fr.html
+++ b/_includes/footer_fr.html
@@ -14,6 +14,6 @@
             <i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
             <a href="https://www.linkedin.com/in/cmoineau"> linkedin/in/cmoineau</a>
         </li>
-        <p id="lastchange" style="float : right; font-size: 0.8em; padding-right: 1em;"></p>
+        <li id="lastchange" style="float : right; font-size: 0.8em; padding-right: 1em;"></li>
     </ul>
 </footer>
