--- a/_includes/lang_switcher.html
+++ b/_includes/lang_switcher.html
@@ -1,5 +1,13 @@
 <li class="lang_switcher">
-    <button class="langbtn"><i class="fa fa-language fa-lg" aria-hidden="true"></i></button>
+    <button class="langbtn"><i class="fa fa-language fa-lg" aria-hidden="true"></i>
+    {% if page.lang == "fr" %}
+    &nbsp;Changer de langue
+    {% endif %}
+    {% if page.lang == "en" %}
+    &nbsp;Switch language
+    {% endif %}
+    
+    </button>
     <div class="lang_switcher-content">
         {% assign pages=site.pages | where:"ref", page.ref%}
         {% for page in pages %}
