--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,7 @@ a {
     background-position: 0 100%;
     transition: background-size 0.25s ease-in;
     text-decoration: none;
+    text-shadow: 0px 0px 6px var(--highlight);
     color: var(--a-c);
 }
 a:hover {
@@ -217,6 +218,28 @@ div.post{
 }
 .box:hover .bulb h2{
     text-shadow: 0px 0px 6px var(--highlight);
+}
+ 
+.main_title {
+    text-shadow: 0px 0px 6px var(--highlight);
+    width: 7em;
+    animation: typing 1.5s steps(15), blink .5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+    text-align: left;
+  }
+  
+@keyframes typing {
+    from {
+      width: 0
+    }
+}
+
+@keyframes blink {
+50% {
+    border-color: transparent
+}
 }
 
 .articles{
