--- a/css/main.css
+++ b/css/main.css
@@ -264,7 +264,7 @@ div.post{
 
 .post_image{
     position:absolute;
-    opacity:0.6;
+    opacity:0.4;
     height:15em;
     width: 25em;
     z-index: 1;
@@ -281,25 +281,37 @@ div.post{
     position:absolute;
     margin: 0 auto;
     width: 100%;
-    margin-top: 25%;
+    margin-top: 10%;
     font-size:150%;
 }
 .post_title{
     text-align: center;
     color: var(--color-text);
-    text-shadow: 0px 0px 0px;
+    text-shadow: 1px 1px 1px black;
     font-weight: bold;
     font-size: 1.1em;
 }
-
+.post_description{
+    color: var(--color-text);
+    text-shadow: 1px 1px 1px black;
+    margin-left: auto;
+    display: flex;
+    flex-direction: column;
+    font-size: 0.9em;
+    text-align: center;
+}
 .description{
-    margin-left: 20em; 
-    margin-right: 20em; 
-    margin-bottom: 3em; 
+    margin-left: 5%; 
+    margin-right: 5%; 
+    margin-bottom: 1em; 
     border-bottom: 1px solid; 
     border-top: 1px solid;
-    display: flex; 
+    display: flex;
     flex-direction: column;
+}
+
+.description div{
+    margin: auto;
 }
 
 .scroll_top{
