--- a/_layouts/post_fr.html
+++ b/_layouts/post_fr.html
@@ -44,9 +44,9 @@
 					{% endfor %}
 				</div>	
 			</div>
-			<figure>
-				<img src="{{ page.image }}" alt="Illustration projet" style="width: 30%;">
-			</figure>
+			<div style="text-align: center;">
+				<img src="{{ page.image }}" alt="Illustration projet">
+			</div>
 
           	{{ content }}
         </div>
