--- a/_layouts/post_en.html
+++ b/_layouts/post_en.html
@@ -44,9 +44,9 @@
 					{% endfor %}
 				</div>	
 			</div>
-			<figure>
-				<img src="{{ page.image }}" alt="Project illustration" style="width: 75%;">
-			</figure>
+			<div style="text-align: center;">
+				<img src="{{ page.image }}" alt="Project illustration">
+			</div>
 
           	{{ content }}
         </div>
