--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ a {
     background-position: 0 100%;
     transition: background-size 0.25s ease-in;
     text-decoration: none;
-    text-shadow: 0px 0px 6px var(--highlight);
+    /* text-shadow: 0px 0px 3px var(--nav-a-c); */
     color: var(--a-c);
 }
 a:hover {
@@ -150,6 +150,12 @@ figure {
     text-align: center;
     font-style: italic;
     font-size: 1.3em;
+}
+figure img{
+    transition: transform ease-in-out 1s;
+}
+figure:hover img{
+    transform: scale(2);
 }
 
 .center {
@@ -348,7 +354,7 @@ div.post{
 /* Dropdown Button */
 .langbtn {
 background-color: transparent;
-color: var(--highlight);
+color: var(--a-c);
 padding: 16px;
 font-size: 16px;
 border: none;
@@ -366,8 +372,8 @@ top: 0.5em}
 .lang_switcher-content {
 display: none;
 position: absolute;
-right: 0em;
-background-color: var(--bg1);
+left: 0em;
+background-color: var(--bg-nav);
 min-width: 160px;
 z-index: 1;
 }
@@ -375,8 +381,10 @@ z-index: 1;
 /* Links inside the dropdown */
 .lang_switcher-content a {
 padding: 12px 16px;
+text-align: center;
 /* text-decoration: none; */
 display: block;
+border: solid 1px #161616;
 }
   
 .lang_switcher:hover .lang_switcher-content {
