--- a/_includes/header_en.html
+++ b/_includes/header_en.html
@@ -1,11 +1,12 @@
 <nav>
     <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/work_experiences">Work experiences</a></li>
-        <li><a href="/projects">My projects</a></li>
-        <!-- <li><a href="/blog">Blog</a></li> -->
-        
-        {% include lang_switcher.html %}
-        
+            <li><a href="/">Home</a></li>
+            <li><a href="/work_experiences">Work experiences</a></li>
+            <li><a href="/projects">My projects</a></li>
     </ul>
+    <ul style="position: absolute; top: -0.2em; right: 0px;">
+        {% include light_switcher.html %}
+        {% include lang_switcher.html %}
+    </ul>
+    
 </nav>
