--- a/_includes/header_fr.html
+++ b/_includes/header_fr.html
@@ -3,9 +3,9 @@
         <li><a href="/fr">Accueil</a></li>
         <li><a href="/work_experiences/fr">Expériences</a></li>
         <li><a href="/projects/fr">Mes projets</a></li>
-        <!-- <li><a href="/blog/fr">Blog</a></li> -->
-
-
+    </ul>
+    <ul style="position: absolute; top: -0.2em; right: 0px;">
+        {% include light_switcher.html %}
         {% include lang_switcher.html %}
     </ul>
 </nav>
