Adding back light and dark theme

--- a/_includes/header_en.html
+++ b/_includes/header_en.html
@@ -5,7 +5,7 @@
             <li><a href="/projects">My projects</a></li>
     </ul>
     <ul style="position: absolute; top: -0.2em; right: 0px;">
-        <!--{% include light_switcher.html %}-->
+        {% include light_switcher.html %}
         {% include lang_switcher.html %}
     </ul>
     
