--- a/_includes/header_fr.html
+++ b/_includes/header_fr.html
@@ -5,7 +5,7 @@
         <li><a href="/projects/fr">Mes projets</a></li>
     </ul>
     <ul style="position: absolute; top: -0.2em; right: 0px;">
-        <!--{% include light_switcher.html %}-->
+        {% include light_switcher.html %}
         {% include lang_switcher.html %}
     </ul>
 </nav>
