Fix HTML error.

--- a/_includes/light_switcher.html
+++ b/_includes/light_switcher.html
@@ -1,12 +1,12 @@
 <li>
-    <input type="checkbox" class="checkbox" id="switch" id="theme" />
+    <input type="checkbox" class="checkbox" id="switch" />
         <label class="label" for="switch">
             <i id="moon" class="fa fa-moon-o" aria-hidden="true"></i>
             <i id="sun" class="fa fa-sun-o" aria-hidden="true"></i>
         </label>
 </li>
 
-<script type="text/javascript">
+<script>
         let trans = () => {
             document.documentElement.classList.add('transition');
             window.setTimeout(() => {
