--- a/_includes/footer_fr.html
+++ b/_includes/footer_fr.html
@@ -2,10 +2,14 @@
 <footer>
     <ul>
         <li> 
-            <i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i>
+            <i class="fa fa-envelope" aria-hidden="true"></i>
              <a href="mailto:moineaucyril@gmail.com">
                  email</a>
-         </li>
+        </li>
+        <li>
+            <i class="fa fa-file-text" aria-hidden="true"></i>
+            <a href="https://raw.githubusercontent.com/cmoineau/MyCV/master/resume.pdf"> Resume</a>
+        </li>
         <li>
             <i class="fa fa-github fa-lg" aria-hidden="true"></i>
             <a href="https://github.com/cmoineau"> github.com/cmoineau</a>
