--- a/_layouts/en.html
+++ b/_layouts/en.html
@@ -7,6 +7,12 @@
 
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<!-- link to langswitch stylesheet -->
+			<link rel="stylesheet" type="text/css" href="/css/lang_switch.css">
+			<!-- link to lightswitch stylesheet -->
+			<link rel="stylesheet" type="text/css" href="/css/light_switch.css">
+			<!-- link to scrolltop stylesheet -->
+			<link rel="stylesheet" type="text/css" href="/css/scroll_top.css">
 			<!-- link for icon -->
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 			<script src="/js/last_edition.js"></script>
